--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Proyecto api passport jwt ",
   "main": "server.js",
   "scripts": {
-    "start-dev": "nodemon server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [
     "api",
